service-database.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: hka-vsmlab
  labels:
    app: vsmlab
    tier: database
    type: service
spec:
  ports:
    - port: 3306
      protocol: TCP
      name: tcp-mysql
  selector:
    app: vsmlab
    tier: database
    type: statefulset
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: hka-vsmlab
  labels:
    app: vsmlab
    tier: database
    type: statefulset
spec:
  serviceName: mysql
  selector:
    matchLabels:
      app: vsmlab
      tier: database
      type: statefulset
  template:
    metadata:
      labels:
        app: vsmlab
        tier: database
        type: statefulset
        version: "5.7.9"
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      restartPolicy: Always
      containers:
      - image: docker.io/bitwrk/web-shop-database:latest
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-volume
          mountPath: /var/lib/mysql
          subPath: data
      volumes:
      - name: mysql-volume
        persistentVolumeClaim:
          claimName: mysql-pvc
