service-products.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-service
  namespace: hka-vsmlab
  labels:
    app: vsmlab
    tier: products-service
    type: service
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http-products
  selector:
    app: vsmlab
    tier: products-service
    type: deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-service
  namespace: hka-vsmlab
  labels:
    app: vsmlab
    tier: products-service
    type: deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: vsmlab
      tier: products-service
      type: deployment
  template:
    metadata:
      labels:
        app: vsmlab
        tier: products-service
        type: deployment
        version: "1.0"
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      restartPolicy: Always
      containers:
        - image: bitwrk/web-shop-products-service:latest
          imagePullPolicy: Always
          name: products-service
          ports:
            - containerPort: 8080
              name: products
