service-webshop.yaml
apiVersion: v1
kind: Service
metadata:
  name: webshop-service
  namespace: hka-vsmlab
  labels:
    app: vsmlab
    tier: webshop-service
    type: service
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http-categories
  selector:
    app: vsmlab
    tier: webshop-service
    type: deployment
    version: "1.0"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webshop-service
  namespace: hka-vsmlab
  labels:
    app: vsmlab
    tier: webshop-service
    type: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vsmlab
      tier: webshop-service
      type: deployment
  template:
    metadata:
      labels:
        app: vsmlab
        tier: webshop-service
        type: deployment
        version: "1.0"
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      restartPolicy: Always
      containers:
        - image: bitwrk/web-shop-legacy:latest
          imagePullPolicy: Always
          name: webshop-service
          ports:
            - containerPort: 8080
              name: webshop
