ingress-istio-final.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: hka-vsmlab-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: webshop-service
spec:
  hosts:
    - "*"
  gateways:
    - hka-vsmlab-gateway
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: webshop-service
