ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vsmlab
  labels:
    app: vsmlab
    tier: ingress
    type: nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
    # The cert-manager certificate issuer to be used for certificate provisioning
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # The ingress class to be used
    kubernetes.io/ingress-class: nginx

spec:
  tls:
    - hosts:
      - <domain>
      secretName: <domain>-tls
  rules:
    - host: <domain>
      http:
        paths:
          - path: /products(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: products-service
                port:
                  number: 80
          - path: /categories(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: categories-service
                port:
                  number: 80
